--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,9 +1,12 @@
 nav {
     margin: 0;
 
-    li{
+    .nav-item{
         display: inline-block; margin: 0 10px;
-         
+         background-color: blue;
+
+         @include roundCorners(8px);
+         @include addPadding(0 5px 8px 0);
         a { cursor: pointer; text-decoration: none;}
     }
 
