--- a/css/master.css
+++ b/css/master.css
@@ -1,2 +1,47 @@
-@media screen and (min-width: 480px){body{background-color:purple}}body{font-size:16px;font:"Arial","Helvetica",sans-serif;background-color:salmon}.box{width:30px;height:30px;border-radius:20px}.box2{width:30px;height:30px;border-radius:50px}nav{margin:0}nav .nav-item{display:inline-block;margin:0 10px;background-color:blue;border-radius:8px;padding:0 5px 8px 0}nav .nav-item a{cursor:pointer;text-decoration:none}nav :hover a{color:pink}footer{position:fixed;bottom:0;background-color:black;color:red}
+@media screen and (max-width: 480px) {
+  body {
+    background-color: purple; } }
+body {
+  font-size: 16px;
+  font: "Arial", "Helvetica", sans-serif;
+  background-color: salmon; }
+
+.box {
+  width: 30px;
+  height: 30px;
+  border-radius: 20px; }
+
+.box2 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px; }
+
+.user {
+  display: inline-block;
+  padding: 12px; }
+  .user .user-name, .user .user-nickname, .user .user-role {
+    margin: 0;
+    padding: 0; }
+
+nav {
+  margin: 0; }
+  nav .nav-item {
+    display: inline-block;
+    margin: 0 10px;
+    background-color: blue;
+    border-radius: 8px;
+    padding: 0 5px 8px 0; }
+    nav .nav-item a {
+      cursor: pointer;
+      text-decoration: none; }
+  nav :hover a {
+    color: pink; }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  background-color: black;
+  padding: 10px;
+  color: white; }
+
 /*# sourceMappingURL=master.css.map */
