--- a/sass/master.scss
+++ b/sass/master.scss
@@ -5,6 +5,7 @@
 
 //main rules go here
 @import 'modules/_main.scss';
+@import 'modules/_users.scss';
 @import 'modules/_nav.scss';
 
 @import 'modules/_footer.scss';
